Fix padding overflow of notes

--- a/src/main/styles.scss
+++ b/src/main/styles.scss
@@ -258,11 +258,13 @@ body {
 .note {
     width: 100%;
     height: 100%;
-    padding: 0px 5px;
+    padding: 0;
     margin: 0;
 
     line-height: 20px;
     min-height: 20px;
+
+    box-sizing: border-box;
 
     outline: none;
 
@@ -283,6 +285,7 @@ body {
     width: fit-content;
     min-height: 20px;
     height: fit-content;
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px 5px;
 
